syntax = "proto3";

package calculator;

option go_package = "github.com/kupetss/calculator_golang_final/internal/proto";

service CalculatorService {
  rpc Calculate (CalculationRequest) returns (CalculationResponse);
  rpc GetHistory (HistoryRequest) returns (HistoryResponse);
}

message CalculationRequest {
  string expression = 1;
  int32 user_id = 2;
}

message CalculationResponse {
  string result = 1;
  string error = 2;
}

message HistoryRequest {
  int32 user_id = 1;
}

message HistoryResponse {
  repeated string expressions = 1;
}